# tasmet

./: .gitignore  CMakeLists.txt  Doxyfile  tasmet_postprocessor.py
doc/: usg.lyx
gui/: about_dialog.py  about_dialog.ui
src/: CMakeLists.txt  chaiscript.cpp  chaiscript.h  main.cpp  tasmet_assert.cpp  tasmet_assert.h  tasmet_config.h  tasmet_consolecolors.h  tasmet_constants.h  tasmet_enum.h  tasmet_evalscript.cpp  tasmet_evalscript.h  tasmet_exception.cpp  tasmet_exception.h  tasmet_io.h  tasmet_pyeval.cpp  tasmet_pyeval.h  tasmet_qt.h  tasmet_solvemodel.cpp  tasmet_tracer.cpp  tasmet_tracer.h  tasmet_types.h  tasmet_utils.h
src/duct/: drag.cpp  drag.h  duct.cpp  duct.h  eq.cpp  eq.h  geom.cpp  geom.h  grid.cpp  grid.h
src/ductbc/: adiabaticwall.cpp  adiabaticwall.h  ductbc.cpp  ductbc.h  pressurebc.cpp  pressurebc.h
src/export/: export.cpp  export.h
src/funcs/: CMakeLists.txt  bessel.cpp  bessel.h  cbessj.h  rottfuncs.cpp  rottfuncs.h  skewsine.cpp  skewsine.h  sph_j.cpp  sph_j.h
src/gui/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  about_dialog.ui  add_duct_dialog.cpp  add_duct_dialog.h  add_duct_dialog.ui  add_ductbc_dialog.cpp  add_ductbc_dialog.h  add_ductbc_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  solver.ui  solver_dialog.cpp  solver_dialog.h  solver_dialog.ui  solver_worker.cpp  solver_worker.h  tasmet_resources.qrc
src/material/: CMakeLists.txt  adiabatictemp.cpp  adiabatictemp.h  air.cpp  air.h  gas.cpp  gas.h  helium.cpp  helium.h  nitrogen.cpp  nitrogen.h  perfectgas.cpp  perfectgas.h  solid.cpp  solid.h
src/protobuf/: duct.proto  ductbc.proto  gas.proto  message_tools.cpp  message_tools.h  model.proto  solver.proto  system.proto  system_tools.cpp  system_tools.h
src/solver/: CMakeLists.txt  bracket_root.h  brent.cpp  brent.h  broyden.h  newton_raphson.cpp  newton_raphson.h  solver.cpp  solver.h  system.cpp  system.h
src/sys/: CMakeLists.txt  globalconf.cpp  globalconf.h  jaccol.cpp  jaccol.h  jacobian.cpp  jacobian.h  jacrow.cpp  jacrow.h  segment.h  tasmet_variable.cpp  tasmet_variable.h  tasystem.cpp  tasystem.h  triplets.cpp  triplets.h
testing/solver/: CMakeLists.txt  brent_test.cpp  newton_raphson_test.cpp
